# spatialtransform

./: .gitignore  README.md  hello.py  pyproject.toml
Python Function/: demo.ipynb
Python Function/Functions/: SpatialTransform.py
Python Function/demo/: demo.ipynb
Python Function/demo/Functions/: SpatialTransform.py  matern.py  mknnIndx.py
R Function/: TransformFunctions.R  demo.R
R Function/Functions/: TransformFunctions.R
