[project]
name = "spatial-deep-learning"
version = "0.1.0"
description = "Work in progress. Attempting to understand Matt Heaton's spatial deep learning work."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
